--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-    "name": "nodebird",
-    "version": "0.0.1",
-    "description": "익스프레스로 만드는 SNS 서비스",
-    "main": "app.js",
-    "scripts": {
-        "start": "nodemon app.js"
-    },
-    "author": "dodi258",
-    "license": "MIT",
-    "dependencies": {
-        "@types/sequelize": "^4.28.9",
-        "bcrypt": "^5.0.0",
-        "connect-flash": "^0.1.1",
-        "cookie-parser": "^1.4.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-session": "^1.17.1",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2",
-        "mysql2": "^2.2.5",
-        "passport": "^0.4.1",
-        "passport-kakao": "^1.0.0",
-        "passport-local": "^1.0.0",
-        "pug": "^3.0.0",
-        "sequelize": "^6.3.5"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.6"
-    }
+  "name": "nodebird",
+  "version": "0.0.1",
+  "description": "익스프레스로 만드는 SNS 서비스",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app"
+  },
+  "author": "ZeroCho",
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^3.0.6",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-kakao": "0.0.5",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.3",
+    "sequelize": "^5.8.6"
+  }
 }
